Fix for bug #18401, makes shuffle() properly generate all possibilities. Patch provided by Adam Trachtenberg <adam@trachtenberg.com>